# ceedling_cmake

./: .gitignore  CMakeLists.txt  LICENSE.txt  cmock.cmake  config.yml
cmock/: cmock.cmake
examples/: CMakeLists.txt
examples/example0/: CMakeLists.txt
examples/example0/src/: bowling_game.c  bowling_game.h
examples/example0/test/: test_bowling_game.c
examples/example1/: CMakeLists.txt
examples/example2/: CMakeLists.txt
examples/example3/: CMakeLists.txt
examples/example3/src/: config.c  config.h  flash.h
examples/example3/test/: test_config.c
examples/example4/: CMakeLists.txt
examples/example4/src/: bar.h  foo.c  foo.h
examples/example4/test/: test_return_thru_ptr.c
examples/example5/: CMakeLists.txt
examples/example5/test/: test_bowling_game.c
scripts/: gen_fixture_runner.py
src/: ddctest.h  pp_iter.h
